[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-timeliner"
version = "0.1.0"
description = "Build a forensic super-timeline by merging & normalizing log/artifact CSVs"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "secops", "timeliner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/timeliner"

[project.scripts]
timeliner = "timeliner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["timeliner"]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = ["F", "E"]
per-file-ignores = {"tests/*" = ["E501"]}
